ksp and change to kotlin and something misc